[package]
name = "redis-yj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"


[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
mini-redis = "0.4.1"
bytes = "1.0"